# Open-PR-DIGI-MCP-Server-for-Claude-AI

./: .gitignore  CONTRIBUTING.md  DESIGN.md  LICENSE  ONBOARDING.md  PLAN.md  README.md  pyproject.toml
.claude/skills/offboard-pr-digi/: SKILL.md
.claude/skills/onboard-pr-digi/: SKILL.md
.claude/skills/setup-remote-access/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  node_compatibility.md
.github/workflows/: ci.yml
config/: credentials.example.yaml  nodes.example.yaml
docs/: mcp-clients.md  onboarding-nodes.md  remote-access.md  tools.md
examples/: claude_desktop_config.json
src/pr_digi_mcp/: __init__.py  commands.py  config.py  credentials.py  discovery.py  http_auth.py  parsers.py  safety.py  server.py
src/pr_digi_mcp/transports/: __init__.py  bpq.py  chained.py  family.py  xnet.py
tests/: test_aggregation.py  test_bpq_challenge.py  test_commands.py  test_config.py  test_discovery.py  test_family.py  test_http_auth.py  test_iac.py  test_integration_mock.py  test_parsers.py  test_safety.py  test_sys_challenge.py
